--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Sunshine</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="test" translatable="false">test</string>
+    <string name="action_search" translatable="false">search</string>
+    <string name="action_compose" translatable="false">compose</string>
 
 </resources>
