--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,25 @@
 
     <string name="app_name">Sunshine</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="test" translatable="false">test</string>
     <string name="action_search" translatable="false">search</string>
     <string name="action_compose" translatable="false">compose</string>
     <string name="title_activity_display_message">My message</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="pref_location_label">Location</string>
+
+    <string name="pref_location_key" translatable = "false" >location</string>
+    <string name="pref_location_default" translatable = "false">94043</string>
+
+
+
+
+
+    <string name="action_settings">settings</string>
+
 
 </resources>
